err/qubricks.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/qubricks'...
Listing './lib/python3.5/site-packages/qubricks/analysis'...
Compiling './lib/python3.5/site-packages/qubricks/analysis/model.py'...
***   File "./lib/python3.5/site-packages/qubricks/analysis/model.py", line 69
    print coloured(message, "YELLOW", True),
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qubricks/analysis/perturbation.py'...
***   File "./lib/python3.5/site-packages/qubricks/analysis/perturbation.py", line 11
    print messages,
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/qubricks/integrator.py'...
***   File "./lib/python3.5/site-packages/qubricks/integrator.py", line 606
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qubricks/measurement.py'...
***   File "./lib/python3.5/site-packages/qubricks/measurement.py", line 901
    print coloured("Attempting to continue data collection...", "YELLOW", True)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qubricks/system.py'...
***   File "./lib/python3.5/site-packages/qubricks/system.py", line 748
    print "-" * len(title)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/qubricks/utility'...
Listing './lib/python3.5/site-packages/qubricks/wall'...
Listing './lib/python3.5/site-packages/qubricks-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
